--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -3,13 +3,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Dive Sites - Bhaccasyoniztas Beach Resort Website Template</title>
+	<title>{{title}}</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<div id="background">
 		<div id="page">
-			{{> header }}
+			{{> header}}
 			<div id="contents">
 				<div class="box">
 					<div>
@@ -18,11 +18,12 @@
 							<ul id="sites">
 								{{#each trips}}
 								<li>
-									<a href="/travel"><img src="images/{{this.image}}" alt="Img"></a>
+									<a href="/api/trips/{{this.code}}"><img src="images/{{this.image}}" alt="Img"></a>
 									<h2><a href="/travel">{{this.name}}</a></h2>
 									{{{this.description}}}
-								</li>	
+								</li>
 								{{/each}}
+								
 							</ul>
 						</div>
 					</div>
